<resources>
    <string name="app_name">SocWeather</string>
    <string name="tvEnterLocationLabel">Enter a location for the forecast.</string>
    <string name="etEnterLocation">where?</string>
    <string name="tvDaysForecastLabel">How many days in the future would you like the forecast for\?</string>
    <string name="etDaysForecast"></string>
    <string name="btnGetForecast">Get forecast</string>`
    <string name="tvGpsLabel">Get the forecast for your current location</string>
    <string name="btnGpsForecast">Get forecast for here</string>

    <!-- Location Confirmation fragment -->
    <string name="tvConfirmLocationLabel">Please confirm the location you want from the options below.</string>
    `
    <string name="btnGetForecastLocationConfirm">Get forecast</string>

    <!-- Forecast fragment -->
    <string name="tvForecastLabel">Forecast for %1$s</string>
    <string name="btnShowLocationMap">Show on map</string>
    <string name="btnCheckForecastOnline">Check forecast online</string>
    <string name="btnShareForecast">Share forecast</string>

    <!-- Settings fragment -->
    <string name="tvSettings">Settings</string>
    <string name="spSettingsUnits">Display temperature in</string>
    <string name="btnSaveSettings">Store</string>
    <string-array name="spSettingsUnitsOptions">
        <item>Celcius</item>
        <item>Farenheit</item>
        <item>Kelvin</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="miSettings">Settings</string>
    <string name="miLocationSelection">Home</string>


    <!-- for randomly generating the weather -->
    <!-- for the RandomWeatherForecastGetter -->
    <string name="weather_sun">sunny</string>
    <string name="weather_rain">rain</string>
    <string name="weather_snow">snow</string>
    <string name="weather_windy">windy</string>

    <!-- for the ListView of Strings showing hourly forecast-->
    <string name="forecasts_hour_str">On %1$s at %2$d it will be %3$d \u00B0C and %4$d%% humidity.</string>

    <!-- for the ListView of Custom Adapter for hourly forecast -->
    <!-- and the RecyclerView -->
    <string name="tv_forecastItemTemp">%1$d\u00B0C</string>
    <string name="tv_forecastItemHumidity">%1$d %%  </string>
    <string name="tv_forecastItemHour">%1$d:00</string>

    <string name="error_downloading_locations">Error getting locations from the WeatherAPI</string>
    <string name="forecast_download_error">Error getting forecast from WeatherAPI</string>
    <string name="btnRedownloadWeather">Redownload</string>

</resources>